added collection offers on collection page

--- a/src/components/SingleNft/SingleNftHistory/_singlenfthistory.scss
+++ b/src/components/SingleNft/SingleNftHistory/_singlenfthistory.scss
@@ -45,6 +45,7 @@
       border-style: double;
       .item-history-table-td {
         background: transparent;
+        vertical-align: middle;
       }
     }
   }
@@ -69,6 +70,8 @@
     font-weight: 500;
     line-height: normal;
     text-transform: capitalize;
+    vertical-align: middle;
+
   }
 
   .active-accept-btn {
