--- a/src/components/Profile/_profilenftlist.scss
+++ b/src/components/Profile/_profilenftlist.scss
@@ -215,7 +215,10 @@
 .big-cards-grid {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  gap: 10px; 
+  @media screen and (max-width: 786px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .small-cards-grid {
@@ -233,6 +236,8 @@
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 20px;
+  width: 100%;
+    overflow-x: auto;
 }
 
 .table {
