--- a/src/components/Home/TrendingSales/_trendingsales.scss
+++ b/src/components/Home/TrendingSales/_trendingsales.scss
@@ -46,6 +46,10 @@
       background: #23244e;
       border: 1px solid transparent;
       .trending-card-title {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        width: 200px;
         color: #fff;
         font-size: 16px;
         font-style: normal;
