--- a/src/components/Profile/ProfileBanner/_profilebanner.scss
+++ b/src/components/Profile/ProfileBanner/_profilebanner.scss
@@ -18,3 +18,12 @@
         opacity: 1;
     }
 }
+
+.upload-dropdown{
+    position: absolute;
+    bottom: -52px;
+    width: 150px;
+    background: #1c3573;
+    border-radius: 12px;
+    right: -10px;
+}
