--- a/src/components/Home/FAQ/_faq.scss
+++ b/src/components/Home/FAQ/_faq.scss
@@ -1,15 +1,15 @@
 .faq-button {
       background-color: #23264f;
       color: white;
-       font-size: 1.25rem !important;
-       font-weight: 400 !important;
+       font-size: 14px !important;
+       font-weight: 600 !important;
     }
 
     .faq-button:not(.collapsed) {
       background-color: #23264f;
       color: white;
-       font-size: 1.25rem !important;
-       font-weight: 400 !important;
+       font-size: 14px !important;
+       font-weight: 600 !important;
     }
 
     .faq-button:after {
