added share link of nft page

--- a/src/components/SingleNft/SingleNftBanner/_singlenftbanner.scss
+++ b/src/components/SingleNft/SingleNftBanner/_singlenftbanner.scss
@@ -19,6 +19,25 @@
     width: 24px;
     height: 24px;
   }
+
+  .collection-info-span {
+    color: #828fbb;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: capitalize;
+  }
+
+  .collection-info {
+    color: #fff;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: capitalize;
+  }
+  
   .collection-name {
     color: #fff;
     font-size: 12px;
