--- a/src/components/Home/MainHero/_mainhero.scss
+++ b/src/components/Home/MainHero/_mainhero.scss
@@ -7,17 +7,88 @@
   // backdrop-filter: blur(10px);
   @media only screen and (max-width: 991px) {
     margin-top: 3rem;
-
   }
 
   @media only screen and (max-width: 420px) {
     margin-top: 3rem;
-  background: url("./assets/main-heroBg-mobile.webp");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
+    background: url("./assets/main-heroBg-mobile.webp");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
+
+  .recently-listed-card-home {
+    border-radius: 41.667px;
+    border-top: 2.5px solid rgba(255, 255, 255, 0.4);
+    border-bottom: 2.5px solid rgba(255, 255, 255, 0.4);
+    background: linear-gradient(
+      161deg,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.05) 101.7%
+    );
+    backdrop-filter: blur(17.5px);
+    position: absolute;
+
+    .card-img {
+      object-fit: cover;
+      border-radius: 41.667px;
+      border-bottom: 2.5px solid #8c30f5;
+      backdrop-filter: blur(10.416666030883789px);
+    }
+
+    .card-img2 {
+      border-radius: 16px;
+    }
+    .recently-listed-title {
+      color: #fff;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      letter-spacing: 1.25px;
+      text-transform: capitalize;
+    }
+    .cfx-price {
+      color: #fff;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      letter-spacing: 1px;
+      text-transform: capitalize;
+    }
+    .usd-price {
+      color: #3dbda7;
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 300;
+      line-height: normal;
+      letter-spacing: 0.5px;
+      text-transform: capitalize;
+    }
+  }
+
+  .cardimage1 {
+    left: 0;
+    z-index: 1;
+    top: 55px;
+  }
+
+  .cardimage2 {
+    right: 36%;
+    z-index: 2;
+    top: -42px;
+  }
+
+  .recent-nfts-sold-wrapper {
+    top: -95px;
+  }
+
+  .cardimage3 {
+    left: 53%;
+    z-index: 1;
+    top: 16px;
+}
 
   .main-hero-desc {
     color: #fff;
@@ -30,7 +101,7 @@
 
     @media screen and (max-width: 786px) {
       width: 100%;
-    font-size: 14px;
+      font-size: 14px;
     }
   }
 
@@ -66,7 +137,7 @@
     text-decoration: none;
 
     @media screen and (max-width: 786px) {
-    font-size: 16px;
+      font-size: 16px;
     }
   }
 }
