--- a/src/components/SingleNft/SingleNftBanner/_singlenftbanner.scss
+++ b/src/components/SingleNft/SingleNftBanner/_singlenftbanner.scss
@@ -8,8 +8,8 @@
   .nft-image {
     border-radius: 15px;
     width: 290px;
-    height: 290px;
-
+    height: 312px;
+    object-fit: cover;
     @media only screen and (max-width: 700px) {
       height: auto;
       width: inherit;
