added multiplier for multiple nfts

--- a/src/components/Profile/_profilenftlist.scss
+++ b/src/components/Profile/_profilenftlist.scss
@@ -105,6 +105,16 @@
   transform: rotate(180deg);
 }
 
+.sumamount {
+  border-radius: 12px;
+  background: #2f80ed;
+  padding: 5px 8px;
+  font-size: 10px;
+  font-weight: 500;
+  color: #fff;
+
+}
+
 .form-check-label {
   color: #fff;
   font-size: 10px;
