--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,25 @@ input:focus {
 }
 
 
+.buy-btn2 {
+  border-radius: 24px;
+  border: 1px solid #2f80ed;
+  background: rgba(47, 128, 237, 0.05);
+  color: #fff;
+  text-align: center;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+  transition: all 0.35s ease;
+}
+
+.buy-btn2:hover {
+  background: #2f80ed;
+}
+
+
 .recently-listed-card {
  
   border-radius: 30px;
