--- a/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
+++ b/src/components/CollectionPage/CollectionBanner/_collectionbanner.scss
@@ -23,11 +23,8 @@
             // width: 25px;
             // height: 25px;
             // left: -40px;
-            
+          }
         }
-        }
-
-       
 
         .collection-title {
           color: #fff;
@@ -37,9 +34,17 @@
           letter-spacing: 0.6px;
           text-transform: capitalize;
           @media screen and (max-width: 786px) {
-           font-size: 14px;
-            
+            font-size: 14px;
+          }
         }
+
+        .collection-title2 {
+          color: #fff;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 700;
+          letter-spacing: 0.6px;
+          text-transform: capitalize;
         }
 
         .collection-info-span {
@@ -130,9 +135,20 @@
   cursor: pointer;
 }
 
-
 .collection-banner-img {
   height: 230px;
   border-radius: 30px;
   object-fit: cover;
+}
+
+.view-profile-text {
+  cursor: pointer;
+  color: #2f80ed;
+  text-align: right;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.4px;
+  text-transform: capitalize;
 }
