fixes for view details popup

--- a/src/components/Profile/ProfileBanner/_profilebanner.scss
+++ b/src/components/Profile/ProfileBanner/_profilebanner.scss
@@ -22,7 +22,7 @@
 .upload-dropdown{
     position: absolute;
     bottom: -52px;
-    width: 150px;
+    width: 225px !important;
     background: #1c3573;
     border-radius: 12px;
     right: -10px;
