--- a/src/components/Home/TrendingSales/_trendingsales.scss
+++ b/src/components/Home/TrendingSales/_trendingsales.scss
@@ -89,8 +89,8 @@
         justify-content: center;
         align-items: center;
         position: absolute;
-        right: 0;
-        top: 0;
+        right: -5px;
+        top: -5px;
         span {
           color: #fff;
           text-align: center;
